# queryforge-test2sql

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_query_cache.py  0003_auth_sessions.py  0004_comments.py  0005_chat_message_turn_id.py
app/: __init__.py  main.py
app/api/: deps.py
app/core/: cache.py  config.py  db.py  errors.py  inflight.py  limiter.py  logging.py  metrics.py  middleware.py  observability.py  resilience.py  security.py  semantic_cache.py
app/schemas/: __init__.py  auth.py  query.py
app/services/: auth_store.py  ingest.py  llm.py  session_store.py  text2sql.py  text2sql_norag.py
app/sql/: executor.py  guard.py  schema_introspect.py
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml  servicemonitor.yaml
deploy/k8s-local/: README.md  configmap-patch.yaml  kustomization.yaml
docker/: Dockerfile.postgres  init-extensions.sql
docs/: ARCHITECTURE.md  EVALS.md  EXPERIMENTS.md  OPEN_SOURCE.md
eval/: ab_eval.py  cspider_loader.py  ex_eval.py  fair_ab_eval.py  generate_schema_descriptions.py  hardness.py  ingest_cspider.py  rag_ablation_eval.py  ragas_eval.py  schema_style_eval.py  summarize_reports.py  sync_es.py
eval/artifacts/: schema_descriptions_baseball_1.json  schema_descriptions_concert_singer.json  (+1 more)
prometheus/: prometheus.yml
scripts/: check_config.py  hil_terminal.py  loadtest.py  rate_limit_test.py  smoke_query.py
static/: app.js  index.html  style.css
tests/: test_detect_language.py  test_doc_ingest.py  test_errors.py  test_guard.py  test_hardness.py  test_ingest_chunk.py  test_schema_corpus.py
(+32 files in other folders)
