[project]
name = "queryforge-text2sql"
version = "0.1.0"
description = "QueryForge — 生产级通用 Text-to-SQL 服务（LangGraph + RAG）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web / 服务
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "asgi-correlation-id>=4.3.4",
    "slowapi>=0.1.9",
    # 配置 / 校验
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    # LangGraph / LangChain（最新主线）
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    # 可观测
    "langfuse>=2.50.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    # 数据库 / 向量
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # RAG / SQL
    "openai>=1.50.0",
    "sqlglot>=25.0.0",
    "tiktoken>=0.8.0",
    # 容错 / 缓存
    "tenacity>=9.0.0",
    "redis>=5.1.0",
    # 鉴权
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.0",
    # 工具
    "httpx>=0.27.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    "pandas>=2.2.0",
]
es = [
    "elasticsearch>=8.13.0",
]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.380",
]

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
markers = ["slow: 标记为慢测试（用 -m 'not slow' 跳过）"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
